[package]
name = "dot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dot"
path = "src/main.rs"

[lib]
name = "dot"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
